--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/mE5dSRTKW1dzV7D0pgP8sMxyIa9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Invasión a los Estados Unidos 1985</span>
-    <span class="hidden">Mikhail Rostov (Richard Lynch), un peligroso terrorista que dirige a un grupo de mercenarios sin escrúpulos, planea comenzar una campaña de terror en los Estados Unidos, pero antes decide acabar con Matt Hunter (Chuck Norris), antiguo integrante de la CIA, que fue su bestia negra en el pasado. Mientras que Hunter trata de salvar su vida de cientos de enemigos que le buscan por todo el país, tendrá que destruir los planes de Rostov que amenazan la estabilidad del país.</span>
+    <span class="hidden">invacion usa u.s.a. u.s.a eeuu e.e.u.u. e.e.u.u ee.uu ee.uu. Mikhail Rostov (Richard Lynch), un peligroso terrorista que dirige a un grupo de mercenarios sin escrúpulos, planea comenzar una campaña de terror en los Estados Unidos, pero antes decide acabar con Matt Hunter (Chuck Norris), antiguo integrante de la CIA, que fue su bestia negra en el pasado. Mientras que Hunter trata de salvar su vida de cientos de enemigos que le buscan por todo el país, tendrá que destruir los planes de Rostov que amenazan la estabilidad del país.</span>
   </a>
 </li>
 <!--FIN--><!-- Los Duros -->
