--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Doctor Strange en el multiverso de la locura -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar A Tu Dragon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula731.html">
+    <img src="https://image.tmdb.org/t/p/original/8ekxsUORMAsfmSc8GzHmG8gWPbp.jpg" alt="Cómo Entrenar A Tu Dragón" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Cómo Entrenar A Tu Dragón</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Doctor Strange en el multiverso de la locura -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula722.html">
     <img src="https://image.tmdb.org/t/p/original/xu0RftYPT4crY4ZSf9SMa5UM8dr.jpg" alt="Doctor Strange en el multiverso de la locura" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
