--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Tipos Malos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar A Tu Dragon -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula731.html">
+    <img src="https://image.tmdb.org/t/p/original/8ekxsUORMAsfmSc8GzHmG8gWPbp.jpg" alt="Cómo Entrenar A Tu Dragón" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Cómo Entrenar A Tu Dragón</div>
+  <div class="text-xs text-white/70">2010</div>
+</article><!-- Los Tipos Malos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula711.html">
     <img src="https://image.tmdb.org/t/p/original/czxHSOXyKd6zEvIOvUTxAwqOjcK.jpg" alt="Los Tipos Malos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
