--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Invasion a los Estados Unidos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Como Entrenar A Tu Dragon -->
+<li>
+  <a href="../Peliculas/pelicula731.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8ekxsUORMAsfmSc8GzHmG8gWPbp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Cómo Entrenar A Tu Dragón 2010</span>
+    <span class="hidden">Un desventurado joven vikingo que aspira a cazar dragones se convierte en el improbable amigo de un joven dragón, y aprende que puede haber más en las criaturas de lo que suponía.</span>
+  </a>
+</li>
+<!--FIN--><!-- Invasion a los Estados Unidos -->
 <li>
   <a href="../Peliculas/pelicula730.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
