--- a/Plataforma/navidad/index.html
+++ b/Plataforma/navidad/index.html
@@ -194,7 +194,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Codigo: Traje rojo -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula732.html">
+    <img src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Cómo Entrenar a tu Dragón: Regreso a Casa</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Codigo: Traje rojo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula723.html">
     <img src="https://image.tmdb.org/t/p/original/dpskAcm71w5v8zQ8RmPmJiP31Om.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
