--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -130,7 +130,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/n12wESAYZNqa88h4EzdD25bJRYR.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Cómo Entrenar a tu Dragón: Regreso a Casa 2019</span>
-    <span class="hidden">Hipo y Chimuelo se reúnen para recordarles a ambos el vínculo inseparable entre vikingos y dragones.</span>
+    <span class="hidden">vuelve a Hipo y Chimuelo se reúnen para recordarles a ambos el vínculo inseparable entre vikingos y dragones.</span>
   </a>
 </li>
 <!--FIN--><!-- Como Entrenar A Tu Dragon -->
