--- a/Categorias/cienciaficcion/index.html
+++ b/Categorias/cienciaficcion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- X-Men: Dias del futuro pasado -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Upgrade -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula733.html">
+    <img src="https://image.tmdb.org/t/p/original/7HN5rOyLkbeBabX4uBcbwU9K1wW.jpg" alt="Upgrade" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Upgrade</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- X-Men: Dias del futuro pasado -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula716.html">
     <img src="https://image.tmdb.org/t/p/original/ggb9nmS5alJuA0ll0iU5YHiGbb0.jpg" alt="X-Men: Días del futuro pasado" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
