--- a/Categorias/suspense/index.html
+++ b/Categorias/suspense/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Invasion a los Estados Unidos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Upgrade -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula733.html">
+    <img src="https://image.tmdb.org/t/p/original/7HN5rOyLkbeBabX4uBcbwU9K1wW.jpg" alt="Upgrade" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Upgrade</div>
+  <div class="text-xs text-white/70">2018</div>
+</article><!-- Invasion a los Estados Unidos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula730.html">
     <img src="https://image.tmdb.org/t/p/original/mE5dSRTKW1dzV7D0pgP8sMxyIa9.jpg" alt="Invasión a los Estados Unidos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
