Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -124,7 +124,16 @@
 
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Upgrade -->
+<li>
+  <a href="../Peliculas/pelicula733.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7HN5rOyLkbeBabX4uBcbwU9K1wW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Upgrade 2018</span>
+    <span class="hidden">Tras ver cómo su mujer es asesinada tras un accidente que le deja parapléjico, un hombre se somete a una operación que le permite volver a caminar para así poder vengar a su esposa.</span>
+  </a>
+</li>
+<!--FIN--><!-- Como Entrenar a tu Dragon: Regreso a Casa -->
 <li>
   <a href="../Peliculas/pelicula732.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
