--- a/Plataforma/anime/index.html
+++ b/Plataforma/anime/index.html
@@ -54,7 +54,7 @@
   <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
     <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Demon Slayer: Kimetsu no Yaiba -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie78.html">
+  <a href="../../Series/serie78.html">
     <img src="https://image.tmdb.org/t/p/original/inXU5hvbDbitrYOgLrq2QjYqiJD.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -64,7 +64,7 @@
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Chainsaw Man -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie77.html">
+  <a href="../../Series/serie77.html">
     <img src="https://image.tmdb.org/t/p/original/mIz0eKhzHuSPeRSePCyoCt9bKVp.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -74,7 +74,7 @@
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Attack on Titan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie72.html">
+  <a href="../../Series/serie72.html">
     <img src="https://image.tmdb.org/t/p/original/yFPQ4JhhirnCVe2UIKGMYX7TOGZ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -84,7 +84,7 @@
   <div class="text-xs text-white/70">2013</div>
 </article><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula609.html">
+  <a href="../../Peliculas/pelicula609.html">
     <img src="https://image.tmdb.org/t/p/original/8g56u2k9CvMHP5IG257QVj9gj1b.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -94,7 +94,7 @@
   <div class="text-xs text-white/70">2024</div>
 </article><!-- No Game, No Life: Zero -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula608.html">
+  <a href="../../Peliculas/pelicula608.html">
     <img src="https://image.tmdb.org/t/p/original/nh9idfkptG4qMib1ObRmCuSMC8B.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -104,7 +104,7 @@
   <div class="text-xs text-white/70">2017</div>
 </article><!-- Los Siete Pecados Capitales -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie62.html">
+  <a href="../../Series/serie62.html">
     <img src="https://image.tmdb.org/t/p/original/yhmHgYvxj1Xez3q6pJKxQVFiP4S.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -114,7 +114,7 @@
   <div class="text-xs text-white/70">2014</div>
 </article><!-- Sailor Moon -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie55.html">
+  <a href="../../Series/serie55.html">
     <img src="https://image.tmdb.org/t/p/original/9Uz8Me0l0hNtMOlrdpH64wrYFa8.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -443,7 +443,7 @@
   <div class="text-xs text-white/70">2018</div>
 </article><!-- Pokemon: Mewtwo contraataca: Evolucion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula494.html">
+  <a href="../../Peliculas/pelicula494.html">
     <img src="https://image.tmdb.org/t/p/original/9w30rykSjSw9KVmESIxYuPBUj4l.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -453,7 +453,7 @@
   <div class="text-xs text-white/70">2019</div>
 </article><!-- Pokemon: Hoopa y un duelo historico -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula493.html">
+  <a href="../../Peliculas/pelicula493.html">
     <img src="https://image.tmdb.org/t/p/original/8Xpjk4WX2l1LnvW4A13uLWWYC8g.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -463,7 +463,7 @@
   <div class="text-xs text-white/70">2015</div>
 </article><!-- Pokemon: Zoroak, el maestro de ilusiones -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula492.html">
+  <a href="../../Peliculas/pelicula492.html">
     <img src="https://image.tmdb.org/t/p/original/wyIzCXga51hExOLrSa60W64lxCD.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -473,7 +473,7 @@
   <div class="text-xs text-white/70">2010</div>
 </article><!-- Pokemon: Arceus y la joya de la vida -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula491.html">
+  <a href="../../Peliculas/pelicula491.html">
     <img src="https://image.tmdb.org/t/p/original/4ghGJZl9N5VZkHy4GFSAPhY5Jgt.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -483,7 +483,7 @@
   <div class="text-xs text-white/70">2009</div>
 </article><!-- Pokemon: Giratina y el guerrero celestial -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula490.html">
+  <a href="../../Peliculas/pelicula490.html">
     <img src="https://image.tmdb.org/t/p/original/4aClfJ4n7w6EybPzJcUV2DotD8x.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -493,7 +493,7 @@
   <div class="text-xs text-white/70">2008</div>
 </article><!-- Pokemon Ranger y el templo del mar -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula489.html">
+  <a href="../../Peliculas/pelicula489.html">
     <img src="https://image.tmdb.org/t/p/original/qE0zfocmuvtaFERg2q8IOypdTh5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -503,7 +503,7 @@
   <div class="text-xs text-white/70">2006</div>
 </article><!-- Pokemon: El Destino de Deoxys -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula488.html">
+  <a href="../../Peliculas/pelicula488.html">
     <img src="https://image.tmdb.org/t/p/original/xKTs8sI7dBAJZqtNR7UJG29pMpl.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -513,7 +513,7 @@
   <div class="text-xs text-white/70">2004</div>
 </article><!-- Pokemon: Jirachi y los deseos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula487.html">
+  <a href="../../Peliculas/pelicula487.html">
     <img src="https://image.tmdb.org/t/p/original/o8Lg5Cevse5mQ8beFfIBDvYRhQI.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -523,7 +523,7 @@
   <div class="text-xs text-white/70">2003</div>
 </article><!-- Pokemon: Lucario y el misterio de Mew -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula484.html">
+  <a href="../../Peliculas/pelicula484.html">
     <img src="https://image.tmdb.org/t/p/original/aEPMnvSfDlDciCpHgFnWje7YSDQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -533,7 +533,7 @@
   <div class="text-xs text-white/70">2005</div>
 </article><!-- Heroes Pokemon: Latios y Latias -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula483.html">
+  <a href="../../Peliculas/pelicula483.html">
     <img src="https://image.tmdb.org/t/p/original/w3u1GuOAZBTt98SDYLXJxadPsk5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -543,7 +543,7 @@
   <div class="text-xs text-white/70">2002</div>
 </article><!-- Pokemon x siempre: Celebi, la voz del bosque -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula482.html">
+  <a href="../../Peliculas/pelicula482.html">
     <img src="https://image.tmdb.org/t/p/original/u0QPVQvyBBsRXfR24K12LLb1YSl.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -553,7 +553,7 @@
   <div class="text-xs text-white/70">2001</div>
 </article><!-- Pokemon 3: el hechizo de los Unown -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula481.html">
+  <a href="../../Peliculas/pelicula481.html">
     <img src="https://image.tmdb.org/t/p/original/uccD0yQ1pgBqeAsrE5tLbOCCWSx.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -563,7 +563,7 @@
   <div class="text-xs text-white/70">2000</div>
 </article><!-- Pokemon la pelicula 2000 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula480.html">
+  <a href="../../Peliculas/pelicula480.html">
     <img src="https://image.tmdb.org/t/p/original/onOIJL2FPGF6hQ66zDEyesfTxSi.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -573,7 +573,7 @@
   <div class="text-xs text-white/70">1999</div>
 </article><!-- El viaje de Chihiro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula474.html">
+  <a href="../../Peliculas/pelicula474.html">
     <img src="https://image.tmdb.org/t/p/original/laXrmaTRuroArSPfsGlvTbeWxVA.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -583,7 +583,7 @@
   <div class="text-xs text-white/70">2001</div>
 </article><!-- Black Clover: La espada del rey mago -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula468.html">
+  <a href="../../Peliculas/pelicula468.html">
     <img src="https://image.tmdb.org/t/p/original/jm2BckEhy1upr4iPpOZ6WTx1tWw.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -593,7 +593,7 @@
   <div class="text-xs text-white/70">2023</div>
 </article><!-- Kaiju No. 8: Mision de reconocimiento -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula413.html">
+  <a href="../../Peliculas/pelicula413.html">
     <img src="https://image.tmdb.org/t/p/original/okYOor2hdF7EFjxs2TxSzwGeKEQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -603,7 +603,7 @@
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Kaiju No. 8 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie50.html">
+  <a href="../../Series/serie50.html">
     <img src="https://image.tmdb.org/t/p/original/A6JOsCdFFTxtbDnKAfE0iY6jOiE.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -613,7 +613,7 @@
   <div class="text-xs text-white/70">2024</div>
 </article><!-- Dragon Ball Z: La Galaxia Corre Peligro -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula401.html">
+  <a href="../../Peliculas/pelicula401.html">
     <img src="https://image.tmdb.org/t/p/original/9gNEyR5CofjsasyemTCCE6EFdKd.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
