--- a/Plataforma/appletv/index.html
+++ b/Plataforma/appletv/index.html
@@ -200,7 +200,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El abismo secreto -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula619.html">
+  <a href="../../Peliculas/pelicula619.html">
     <img src="https://image.tmdb.org/t/p/original/3s0jkMh0YUhIeIeioH3kt2X4st4.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -210,7 +210,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- Del cielo al infierno -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula557.html">
+  <a href="../../Peliculas/pelicula557.html">
     <img src="https://image.tmdb.org/t/p/original/b0AQYSM09AYVRKLZr6jIAP2xNq9.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -220,7 +220,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2025</div>
 </article><!-- El nino, el topo, el zorro y el caballo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula526.html">
+  <a href="../../Peliculas/pelicula526.html">
     <img src="https://image.tmdb.org/t/p/original/zCSrpzYQgi8nmzHi7ZgszQ6Z1Ln.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -230,7 +230,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Palmer -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula314.html">
+  <a href="../../Peliculas/pelicula314.html">
     <img src="https://image.tmdb.org/t/p/original/xSDdRAjxKAGi8fUBLOqSrBhJmF0.jpg" alt="Palmer" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
