--- a/Plataforma/cartoonnetworks/index.html
+++ b/Plataforma/cartoonnetworks/index.html
@@ -201,7 +201,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
       <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Un show mas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie74.html">
+  <a href="../..//Series/serie74.html">
     <img src="https://image.tmdb.org/t/p/original/6xea7V4d2xayrlBKOtMZ4wlV6wZ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -211,7 +211,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2010</div>
 </article><!-- Hora de Aventura -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie67.html">
+  <a href="../..//Series/serie67.html">
     <img src="https://image.tmdb.org/t/p/original/vpnV0g2VOounP0kHNi86oBPceMY.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -231,7 +231,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Hermano de Jorel especial de navidad: Hermano de Noel -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula661.html">
+  <a href="../..//Peliculas/pelicula661.html">
     <img src="https://image.tmdb.org/t/p/original/3GWWAAh44ek8FuMRRP8FkK9MJn5.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -241,7 +241,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2022</div>
 </article><!-- Ben 10: Carrera contra el tiempo -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula364.html">
+  <a href="../..//Peliculas/pelicula364.html">
     <img src="https://image.tmdb.org/t/p/original/65YwMIqIuOV8shxysuJytaHSR8C.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -251,7 +251,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2008</div>
 </article><!-- Ben 10 - Generator Rex: Heroes United -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula363.html">
+  <a href="../..//Peliculas/pelicula363.html">
     <img src="https://image.tmdb.org/t/p/original/mRMkd4e4oowrUyFC2kF9eQsFCDr.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -261,7 +261,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2011</div>
 </article><!-- Ben 10: Invasion Alienigena -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula362.html">
+  <a href="../..//Peliculas/pelicula362.html">
     <img src="https://image.tmdb.org/t/p/original/bFB5Y184X41AgLiuNQRqvTqDEGQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -271,7 +271,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2010</div>
 </article><!-- Ben 10: El Secreto del Omnitrix -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula361.html">
+  <a href="../..//Peliculas/pelicula361.html">
     <img src="https://image.tmdb.org/t/p/original/nFYZxaWos8fAUyzW5zNZoN4iJ2j.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -281,7 +281,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2007</div>
 </article><!-- Ben 10: destruccion alienigena -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula360.html">
+  <a href="../..//Peliculas/pelicula360.html">
     <img src="https://image.tmdb.org/t/p/original/kB0q3pXKRQ9f8IGzYrrM1qUXuuF.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -291,7 +291,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2012</div>
 </article><!-- La gran aventura de Billy y Mandy contra el coco -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula278.html">
+  <a href="../..//Peliculas/pelicula278.html">
     <img src="https://image.tmdb.org/t/p/original/nMWGHdVUrGQwo1SQ4JdDUv556L8.jpg" alt="La gran aventura de Billy y Mandy contra el coco" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
@@ -301,7 +301,7 @@ document.addEventListener("DOMContentLoaded", () => {
   <div class="text-xs text-white/70">2007</div>
 </article><!-- Mansion Foster Para Amigos Imaginarios: Destino Imaginacion -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula275.html">
+  <a href="../..//Peliculas/pelicula275.html">
     <img src="https://image.tmdb.org/t/p/original/uNBljb1382SlOmLtNGhkFD0pRjV.jpg" alt="Mansión Foster Para Amigos Imaginarios: Destino Imaginación" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Movie
